[package]
name = "lie-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "chrono"] }
chrono = "0.4"
chrono-tz = "0.9"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rcgen = "0.13"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
